<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point
    </string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for
        details.
    </string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is\u0020<xliff:g id="trace_file">%s</xliff:g></string>
    <string name="menu_about_item">About</string>
    <string name="how_to_pointer_title">Welcome to AnySoftKeyboard</string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_url">More:\u0020<xliff:g id="url">%s</xliff:g></string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="testers_version">Testers build!</string>
    <string name="language_root_tile">Language</string>
    <string name="language_keyboards_settings_tile">Enable keyboards and languages.</string>
    <string name="language_grammar_settings_tile">Configure correction behavior and other dictionaries.</string>
    <string name="language_tweaks_settings_tile">Tweaks and more.</string>
    <string name="ui_root_tile">UI</string>
    <string name="ui_theme_settings_tile">Pick and configure keyboard themes.</string>
    <string name="ui_effects_settings_tile">Keyboard effects and experience.</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at the app store</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at the app store…</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="delete_button">Delete</string>
    <string name="added_word">Saved:\u0020<xliff:g id="word">%s</xliff:g></string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:\u0020<xliff:g id="word">%s</xliff:g></string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="hint_click_for_inline_suggestions">Available auto-fill suggestions</string>
    <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when pressing space.</string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to alphabet when pressing space.</string>
    <string name="persistent_layout_per_package_id_title">Remember alphabet layout per App</string>
    <string name="persistent_layout_per_package_id_off_summary">Use the same layout for all Apps.</string>
    <string name="persistent_layout_per_package_id_on_summary">Automatically switch to the previous layout used in the App.</string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is
        used
    </string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is
        used
    </string>
    <string name="enable_alt_space_language_shortcut">Alt + Space switches languages</string>
    <string name="enable_alt_space_language_shortcut_on_summary">Hardware Alt + Space switches to the next available layout.</string>
    <string name="enable_alt_space_language_shortcut_off_summary">Hardware Alt + Space enters a space.</string>
    <string name="enable_shift_space_language_shortcut">Shift + Space switches languages</string>
    <string name="enable_shift_space_language_shortcut_on_summary">Hardware Shift + Space switches to the next available layout.</string>
    <string name="enable_shift_space_language_shortcut_off_summary">Hardware Shift + Space enters a space.</string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="hardware_keys_group">Hardware keys mapping</string>
    <string name="volume_key_for_left_right_support">Volume key for left/right</string>
    <string name="volume_key_for_left_right_support_on_summary">Disable left/right via volume up/down</string>
    <string name="volume_key_for_left_right_support_off_summary">Volume up turns cursor left, volume down turns cursor right</string>
    <string name="special_dictionaries_group_summary">Suggestion dictionaries used in AnySoftKeyboard</string>
    <string name="use_user_dictionary">User-dictionary</string>
    <string name="use_user_dictionary_on_summary">Suggest user added words (double-click a typed-suggestion to add)</string>
    <string name="use_user_dictionary_off_summary"/>
    <string name="always_use_fallback_user_dictionary">Use private User-Dictionary storage</string>
    <string name="always_use_fallback_user_dictionary_on_summary">Use private-storage AnySoftKeyboard\'s built-in User-dictionary mechanism.</string>
    <string name="always_use_fallback_user_dictionary_off_summary">Try to use Android\'s global built-in User-dictionary.</string>
    <string name="use_auto_dictionary">Auto dictionary</string>
    <string name="use_auto_dictionary_dialog_title">Select learn method</string>
    <string name="use_auto_dictionary_summary">Automatically learn new words. Learn method: %s</string>
    <string name="auto_pick_suggestion_aggressiveness_title">Auto-select suggestion aggressiveness</string>
    <string name="auto_pick_suggestion_aggressiveness_summary">Aggressiveness level: %s</string>
    <string name="use_contacts_dictionary">Contacts dictionary</string>
    <string name="use_contacts_dictionary_on_summary">Suggest names from contacts list</string>
    <string name="use_contacts_dictionary_off_summary"/>
    <string name="tweaks_group">Tweaks</string>
    <string name="tweak_physical_keyboard_group">Physical keyboard tweaks</string>
    <string name="tweak_ux_group">Behavior tweaks</string>
    <string name="tweak_dictionary_group">Dictionary tweaks</string>
    <string name="use_keyrepeat">Use key repeat</string>
    <string name="use_keyrepeat_on_summary">Key repeat is enabled</string>
    <string name="use_keyrepeat_off_summary">Key repeat is disabled</string>
    <string name="insert_space_after_word_suggestion_selection">Space after candidate pick</string>
    <string name="insert_space_after_word_suggestion_selection_on_summary">Insert space after word
        suggestion select
    </string>
    <string name="insert_space_after_word_suggestion_selection_off_summary"/>
    <string name="double_space_to_period">Double space to period</string>
    <string name="double_space_to_period_summary">Double space tap will become period+space</string>
    <string name="cycle_all_symbols_keyboards">Cycle through all symbols</string>
    <string name="cycle_all_symbols_keyboards_on_summary">Symbols key will cycle through all symbols keyboards.</string>
    <string name="cycle_all_symbols_keyboards_off_summary">Symbols key will only show main symbols keyboard.</string>
    <string name="auto_caps">Auto-capitalization</string>
    <string name="grammar_group">Grammar</string>
    <string name="keyboard_behavior_group">Keyboard Behavior</string>
    <string name="candidates_on">Show suggestions</string>
    <string name="candidates_on_summary">A list of suggested words will be displayed above the
        keyboard
    </string>
    <string name="candidates_off_summary">No suggestions will be shown</string>
    <string name="quick_fix">Quick fixes and abbreviations</string>
    <string name="quick_fix_summary">Corrects commonly typed mistakes, and expands abbreviations</string>
    <string name="quick_fix_secon_disabled">…on first language only</string>
    <string name="quick_fix_secon_disabled_summ_on">Quick fixes and abbreviations will work only on current layout language</string>
    <string name="quick_fix_secon_disabled_summ_off">Quick fixes and abbreviations will work on every language 
                  checked in override default dictionary</string>
    <string name="try_split_words_for_correction">[beta] Correct by splitting typed word</string>
    <string name="try_split_words_for_correction_summary_on">Split typed word by guessing missing SPACE.</string>
    <string name="try_split_words_for_correction_summary_off"/>
    <string name="allow_suggestions_restart">Suggestions restart</string>
    <string name="allow_suggestions_restart_summary">Restart word suggestion upon cursor movement
    </string>
    <string name="user_dict_editor">Words editor</string>
    <string name="abbreviation_dict_editor">Abbreviation editor</string>
    <string name="should_swap_punctuation_and_space_title">Swap punctuation and space</string>
    <string name="should_swap_punctuation_and_space_off_summary">Do not swap space and
        punctuation.
    </string>
    <string name="should_swap_punctuation_and_space_on_summary">Swap auto-space and punctuation.
    </string>
    <string name="word_editor_action_add_word">Add word</string>
    <string name="word_editor_action_backup_words">Backup</string>
    <string name="word_editor_action_restore_words">Restore</string>
    <string name="setup_wizard_step_download_title">Download Language Packs</string>
    <string name="setup_wizard_step_download_details">You\'ll be happy to know that <i>AnySoftKeyboard</i> supports dozens of languages. Just download the desired language-pack and enjoy typing in
        any language on your device.</string>
    <string name="setup_wizard_step_download_action">Download language pack</string>
    <string name="setup_wizard_step_download_skip_action">Skip</string>
    <string name="next_word_dict_settings">Next Word settings</string>
    <string name="app_shortcut_gestures_short_label">Gestures</string>
    <string name="app_shortcut_quick_keys_short_label">Setup Emojis</string>
    <string name="keyboard_for_url_fields">Layout for URL fields</string>
    <string name="keyboard_for_url_fields_summary">When in URL/Email fields, this layout will be used. Currently, %s</string>
    <string name="keyboard_for_url_fields_title">Select layout for URL input</string>
    <string name="bottom_nav_home">Hello</string>
    <string name="setup_wizard_welcome_title">Welcome!</string>
    <string name="setup_wizard_welcome_sub_title">Thank you for giving AnySoftKeyboard a try!
    </string>
    <string name="setup_wizard_welcome_info">As with any other Android keyboard, you are required to
        enable AnySoftKeyboard in Android Settings pages. This is required by Android to ensure that
        your typing data is not stolen by evil keyboards*.
    </string>
    <string name="setup_wizard_welcome_info_2">Okay, ready? click below to start, I\'ll guide you through this.</string>
    <string name="setup_wizard_welcome_start_action">Start setup…</string>
    <string name="setup_wizard_welcome_info_footnote">* Of course, AnySoftKeyboard is not evil. You
        are encouraged to look at our source code and verify that. Plus, we do not have <i>NETWORK
        </i> permissions, so we can not send any data off the device.
    </string>
    <string name="setup_wizard_welcome_privacy_action">Go to Privacy Policy…</string>
</resources>