<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:pp="http://schemas.android.com/apk/res-auto"
                  android:key="tweaks_group_screen"
                  android:title="@string/tweaks_group">

    <androidx.preference.PreferenceCategory
        android:key="tweak_dictionary_group"
        android:title="@string/tweak_dictionary_group">

        <androidx.preference.CheckBoxPreference
            android:key="@string/settings_key_always_use_fallback_user_dictionary"
            android:title="@string/always_use_fallback_user_dictionary"
            android:persistent="true"
            android:defaultValue="@bool/settings_default_always_use_fallback_user_dictionary"
            android:summaryOn="@string/always_use_fallback_user_dictionary_on_summary"
            android:summaryOff="@string/always_use_fallback_user_dictionary_off_summary"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="tweak_physical_keyboard_group"
        android:title="@string/tweak_physical_keyboard_group">

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="use_keyrepeat"
            android:persistent="true"
            android:summaryOff="@string/use_keyrepeat_off_summary"
            android:summaryOn="@string/use_keyrepeat_on_summary"
            android:title="@string/use_keyrepeat"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_hide_soft_when_physical"
            android:key="@string/settings_key_hide_soft_when_physical"
            android:persistent="true"
            android:summaryOff="@string/hide_soft_when_physical_off_summary"
            android:summaryOn="@string/hide_soft_when_physical_on_summary"
            android:title="@string/hide_soft_when_physical"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_enable_alt_space_language_shortcut"
            android:key="@string/settings_key_enable_alt_space_language_shortcut"
            android:persistent="true"
            android:summaryOff="@string/enable_alt_space_language_shortcut_off_summary"
            android:summaryOn="@string/enable_alt_space_language_shortcut_on_summary"
            android:title="@string/enable_alt_space_language_shortcut"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_enable_shift_space_language_shortcut"
            android:key="@string/settings_key_enable_shift_space_language_shortcut"
            android:persistent="true"
            android:summaryOff="@string/enable_shift_space_language_shortcut_off_summary"
            android:summaryOn="@string/enable_shift_space_language_shortcut_on_summary"
            android:title="@string/enable_shift_space_language_shortcut"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="tweak_ux_group"
        android:title="@string/tweak_ux_group">

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="insert_space_after_word_suggestion_selection"
            android:persistent="true"
            android:summaryOff="@string/insert_space_after_word_suggestion_selection_off_summary"
            android:summaryOn="@string/insert_space_after_word_suggestion_selection_on_summary"
            android:title="@string/insert_space_after_word_suggestion_selection"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_cycle_all_symbols"
            android:key="@string/settings_key_cycle_all_symbols"
            android:persistent="true"
            android:summaryOff="@string/cycle_all_symbols_keyboards_off_summary"
            android:summaryOn="@string/cycle_all_symbols_keyboards_on_summary"
            android:title="@string/cycle_all_symbols_keyboards"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_use_backword"
            android:key="@string/settings_key_use_backword"
            android:persistent="true"
            android:summaryOff="@string/backword_support_off_summary"
            android:summaryOn="@string/backword_support_on_summary"
            android:title="@string/backword_support"/>

        <androidx.preference.ListPreference
            android:defaultValue="@string/settings_default_keyboard_id"
            android:dialogTitle="@string/keyboard_for_url_fields_title"
            android:key="@string/settings_key_layout_for_internet_fields"
            android:summary="@string/keyboard_for_url_fields_summary"
            android:title="@string/keyboard_for_url_fields"/>
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
