<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="prefs_addons_screen">

    <android.support.v7.preference.PreferenceCategory
        android:key="behavior_group"
        android:title="@string/keyboard_behavior_group">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="candidates_on"
            android:persistent="true"
            android:title="@string/candidates_on"
            android:summaryOn="@string/candidates_on_summary"
            android:summaryOff="@string/candidates_off_summary"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_allow_suggestions_restart"
            android:dependency="candidates_on"
            android:key="@string/settings_key_allow_suggestions_restart"
            android:persistent="true"
            android:summaryOff=""
            android:summaryOn="@string/allow_suggestions_restart_summary"
            android:title="@string/allow_suggestions_restart"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_switch_to_alphabet_on_space"
            android:key="@string/settings_key_switch_keyboard_on_space"
            android:persistent="true"
            android:summaryOff="@string/switch_keyboard_on_space_off_summary"
            android:summaryOn="@string/switch_keyboard_on_space_on_summary"
            android:title="@string/switch_keyboard_on_space"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_bool_should_swap_punctuation_and_space"
            android:key="@string/settings_key_bool_should_swap_punctuation_and_space"
            android:persistent="true"
            android:summaryOff="@string/should_swap_punctuation_and_space_off_summary"
            android:summaryOn="@string/should_swap_punctuation_and_space_on_summary"
            android:title="@string/should_swap_punctuation_and_space_title"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="double_space_to_period"
            android:persistent="true"
            android:summaryOff=""
            android:summaryOn="@string/double_space_to_period_summary"
            android:title="@string/double_space_to_period"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_persistent_layout_per_package_id"
            android:key="@string/settings_key_persistent_layout_per_package_id"
            android:persistent="true"
            android:summaryOff="@string/persistent_layout_per_package_id_off_summary"
            android:summaryOn="@string/persistent_layout_per_package_id_on_summary"
            android:title="@string/persistent_layout_per_package_id_title"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="hardware_keys_group"
        android:title="@string/hardware_keys_group">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_use_volume_key_for_left_right"
            android:key="@string/settings_key_use_volume_key_for_left_right"
            android:persistent="true"
            android:summaryOff="@string/volume_key_for_left_right_support_off_summary"
            android:summaryOn="@string/volume_key_for_left_right_support_on_summary"
            android:title="@string/volume_key_for_left_right_support"/>
    </android.support.v7.preference.PreferenceCategory>

    <Preference
        android:key="@string/tweaks_group_key"
        android:title="@string/tweaks_group"/>

</android.support.v7.preference.PreferenceScreen>