<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="special_dictionaries_group">

    <Preference
        android:key="summary"
        android:summary="@string/special_dictionaries_group_summary" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="candidates_on"
        android:persistent="true"
        android:title="@string/candidates_on"
        android:summaryOn="@string/candidates_on_summary"
        android:summaryOff="@string/candidates_off_summary"/>

    <androidx.preference.CheckBoxPreference
        android:key="@string/settings_key_use_user_dictionary"
        android:title="@string/use_user_dictionary"
        android:persistent="true"
        android:defaultValue="@bool/settings_default_user_dictionary"
        android:summaryOn="@string/use_user_dictionary_on_summary"
        android:summaryOff="@string/use_user_dictionary_off_summary"
        android:dependency="candidates_on"/>

    <androidx.preference.CheckBoxPreference
        android:key="Test"
        android:title="Enable 'T9 suggestions'"
        android:summaryOn="Allows for faster typing on T9-like keyboards"
        android:summaryOff=""
        android:persistent="true"
        android:defaultValue="false"
        />

    <Preference android:title="@string/user_dict_editor"
        android:key="@string/user_dict_editor_key"
        android:dependency="candidates_on">
    </Preference>

    <Preference android:title="@string/next_word_dict_settings"
                android:key="@string/next_word_dict_settings_key"
                android:dependency="candidates_on">
    </Preference>

    <androidx.preference.PreferenceCategory
        android:key="grammar_group"
        android:title="@string/grammar_group">

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_caps"
            android:persistent="true"
            android:title="@string/auto_caps"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:dependency="candidates_on"
            android:key="@string/settings_key_quick_fix"
            android:persistent="true"
            android:summaryOff=""
            android:summaryOn="@string/quick_fix_summary"
            android:title="@string/quick_fix"/>
        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:dependency="@string/settings_key_quick_fix"
            android:key="@string/settings_key_quick_fix_second_disabled"
            android:persistent="true"
            android:summaryOff="@string/quick_fix_secon_disabled_summ_off"
            android:summaryOn="@string/quick_fix_secon_disabled_summ_on"
            android:title="@string/quick_fix_secon_disabled"/>

        <androidx.preference.ListPreference
            android:key="@string/settings_key_auto_pick_suggestion_aggressiveness"
            android:dependency="candidates_on"
            android:defaultValue="@string/settings_default_auto_pick_suggestion_aggressiveness"
            android:dialogTitle="@string/auto_pick_suggestion_aggressiveness_title"
            android:entries="@array/auto_pick_suggestion_aggressiveness_types"
            android:entryValues="@array/auto_pick_suggestion_aggressiveness_values"
            android:summary="@string/auto_pick_suggestion_aggressiveness_summary"
            android:title="@string/auto_pick_suggestion_aggressiveness_title"/>

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_try_splitting_words_for_correction"
            android:dependency="candidates_on"
            android:key="@string/settings_key_try_splitting_words_for_correction"
            android:persistent="true"
            android:summaryOff="@string/try_split_words_for_correction_summary_off"
            android:summaryOn="@string/try_split_words_for_correction_summary_on"
            android:title="@string/try_split_words_for_correction"/>

    </androidx.preference.PreferenceCategory>

    <Preference android:title="@string/abbreviation_dict_editor"
        android:key="@string/abbreviation_dict_editor_key"
        android:dependency="@string/settings_key_quick_fix">
    </Preference>

    <androidx.preference.ListPreference
        android:key="@string/settings_key_auto_dictionary_threshold"
        android:defaultValue="@string/settings_default_auto_dictionary_add_threshold"
        android:dialogTitle="@string/use_auto_dictionary_dialog_title"
        android:entries="@array/auto_dictionary_threshold_types"
        android:entryValues="@array/auto_dictionary_threshold_values"
        android:summary="@string/use_auto_dictionary_summary"
        android:title="@string/use_auto_dictionary"
        android:dependency="candidates_on"/>
    <androidx.preference.CheckBoxPreference
        android:key="@string/settings_key_use_contacts_dictionary"
        android:title="@string/use_contacts_dictionary"
        android:persistent="true"
        android:defaultValue="@bool/settings_default_contacts_dictionary"
        android:summaryOn="@string/use_contacts_dictionary_on_summary"
        android:summaryOff="@string/use_contacts_dictionary_off_summary"
        android:dependency="candidates_on"/>

</androidx.preference.PreferenceScreen>
