<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_app_shortcut_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/languageSettingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_app_shortcut_language"
        android:title="@string/language_root_tile" />

    <item
        android:id="@+id/userInterfaceSettingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_app_shortcut_themes"
        android:title="@string/ui_root_tile" />

    <item
        android:id="@+id/gesturesSettingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_app_shortcut_gestures"
        android:title="@string/app_shortcut_gestures_short_label" />

    <item
        android:id="@+id/quickTextKeysBrowseFragment"
        android:enabled="true"
        android:icon="@drawable/ic_app_shortcut_quick_keys"
        android:title="@string/app_shortcut_quick_keys_short_label" />

</menu>
