<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/global_content_padding_side"
    android:orientation="vertical">

    <TextView
        style="@style/Ask.Text.Large.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/setup_wizard_step_download_title" />

    <ImageView
        android:id="@+id/step_state_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/ic_wizard_download_pack_missing" />

    <TextView
        android:id="@+id/go_to_download_packs_action"
        style="@style/Ask.Text.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/transparent_click_feedback_background"
        android:drawableLeft="@drawable/ic_keyboard_globe_menu"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_keyboard_globe_menu"
        android:padding="4dp"
        android:text="@string/setup_wizard_step_download_action" />

    <TextView
        android:id="@+id/skip_download_packs_action"
        style="@style/Ask.Text.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/transparent_click_feedback_background"
        android:drawableLeft="@drawable/ic_cancel"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/ic_cancel"
        android:padding="4dp"
        android:text="@string/setup_wizard_step_download_skip_action" />

    <TextView
        style="@style/Ask.Text.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/setup_wizard_step_download_details" />

</LinearLayout>